static/analyses.css
body{
    background-color: black;
    color:white;
    
}
*{
    margin: 0;
    padding: 0;
    scroll-behavior: smooth;
}
.light{
    display: flex;
    justify-self: self-end;
    align-self: self-end;
    position: fixed;
    z-index: 9999;
    background: linear-gradient(to bottom right,rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),rgba(0, 0, 0, 0),#d5ff3fab);
    width: 100%;
    height: 34em;
    pointer-events: none;
    inset: 0;
    z-index:-1;
}
header{
    position:fixed;
    top:0;
    left:0;
    width:100%;
    height:4em;
    display:flex;
    align-items:center;
    padding:0 1.4em;
    background:#d5ff3f1b;
    z-index:999;
    box-sizing: border-box;
}
#section1{
    margin-top: 8em;
}
.part1{
    display: flex;
    width: 60%;
    height: 100%;
    margin-left:15%;
    padding: 2em;
    background: linear-gradient(to bottom left,#d4ff3f,black,black,black,black,black,#d4ff3f);
    border-radius: 50px;

    
}
img{
    width: 10em;
    height: 10em;
    border-radius: 20px;
    border: 1px solid #d4ff3f;
    background-color: #d5ff3f20;

}
.difenation{
    margin-left: 3em;
}
.realname{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 2.5em;
    margin-bottom: 0em;
}
.name{
    font-size: 1.4em;
    opacity: 0.5;

}
.bio{
    opacity: 0.5;
    font-size: 1.6;
    margin:  1em 0;
}
.nobio{
    margin: 2.5em 0;
}
.follow{
    display: flex;
}
.follow h3{
    margin-right: 1em;
    font-family: sans-serif;
    font-size: 0.7em;
    border: 1px solid rgba(255, 255, 255, 0.192);
    background-color: rgba(255, 255, 255, 0.10);
    border-radius: 20px;
    padding: 0.5em 1em; 
}
.follow h3:hover{
    border-color: #d4ff3f;
}
.follow i{
    color: #d4ff3f;
    margin-right: 0.2em;
    font-size: 1.4em;
}

.view{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 1em;
    border: 1px solid rgba(255, 255, 255, 0.192);
    background-color: rgba(255, 255, 255, 0.10);
    border-radius: 20px;
    text-decoration: none;
    color: #ffff;
    height: 1em;
    padding: 1em;
    transition: 1s ease;
}

.view i{
    margin-left: 0.2em;
    font-size: 1.5em;
}
.view:hover i {
    color:#d4ff3f;
}
.view:hover{
    border-color: #d4ff3f;
    transform: scale(1.1);
}


.cards_basic_info{
    display:flex;
    width: 90%;
    height: 15em ;
    padding: 1em;
    justify-self: center;
    margin-top: 5em;

}
.card_basic{
    margin: 0.6em;
    border: 1px solid rgba(255, 255, 255, 0.192);
    background-color: rgba(255, 255, 255, 0.10);
    width: 20%;
    height: 60%;
    padding: 1em 1.5em;
    border-radius: 20px;
    position: relative;
    font-family: Arial, Helvetica, sans-serif;
    transition: 1s ease;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.card_basic i{
    color: #d4ff3f;
    background-color:#d5ff3f20;
    font-size: 1.5em;
    padding: 0.3em;
    border-radius: 50%;
    width: 1.5em;
    height: 1.5em;
    display: flex;
    justify-content: center;
    align-items: center;
}
.card_basic p{
    opacity: 0.5;
    font-size: 0.7em;
    letter-spacing: 1px;
    margin-top: 2.7em;
    margin-bottom: 0.5em;
}

.card_basic:hover{
    border-color: #d4ff3f;
}
#nolang{
    margin-top: 0.5em;
    font-size: 1.5em;
}

.developer_score{
    width: 90%;
    height: 45em;
    border-radius: 20px;
    padding: 2.5em;
    margin:  5em 5%;
    box-sizing: border-box;
    background-color: rgba(255, 255, 255, 0.10);
    border: 1px solid rgba(255, 255, 255, 0.192);

}

progress{
    width: 100%;
    height: 2em;
    accent-color: #d4ff3f;
}
.score{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: 1.5px;
    margin-bottom: 0.5em;
    font-weight: 800;
    color: #ffffff7a;
    text-align: center;
    align-items: center;
    font-size: 0.8em;

}
.score span{
    font-size: 2em;
    color: white;
}

.score_cards{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    width: 40%;

}
.score_cards .card {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0 0.5em;
    margin: 0.6em;
    border: 1px solid rgba(255, 255, 255, 0.192);
    background-color: rgba(255, 255, 255, 0.10);
    width: 46%;
    height: 7em;
    border-radius: 20px;
    font-family: Arial, Helvetica, sans-serif;
    box-sizing: border-box;
}
.iconscore{
    color: #d4ff3f;
    font-size: 1.4em;
}
.score_cards .card p{
    color: #ffffff86;
    margin-top: 0.4em;
    margin-bottom: 0.3em;
}
.score_cards .card h4{
    font-size: 1em;
}
.score_cards .card span{
    font-size: 1.5em;
    color: white;
}
#card_profile{
    width: 100%;
}
.dont_found_name{
    display: flex;
        margin-top: 2em;
}
.line{
    height: 33em;
    width: 0.4em;
    border-radius: 15px;
    background-color: #d5ff3f69;
    margin-left: 2.5em;
}

.check{
    display: flex;
    align-items: center;
    font-size: 1em;

}
.check h5 {
    margin-left: 1.5em;
    color: rgba(255, 255, 255, 0.499);
}
.check i{
    color:#d4ff3f;
    font-weight: 900;
    
}
.profil_score{
    display: flex;
    margin-bottom: 1.2em;
    width: 74%;
}
.profil_score i{
    color: #d4ff3f;
    font-size: 2em;
    margin-top: 0.5em;
}
.profile_show_score{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    justify-self: center;
    align-self:center ;
    margin-left: 20%;
}
.ai_tips{
    display: flex;
    flex-direction: column;
    padding: 2em;
    width: 50%;
    border: 2px solid greenyellow;
}

